Reattach inner WebContents when recreating its RenderWidgetHostView.

Bug: 772354
Change-Id: Ie82bb502cbfbf989d653d45ba7e73164de448d26
Reviewed-on: https://chromium-review.googlesource.com/713949
Reviewed-by: James MacLean <wjmaclean@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Commit-Queue: Lucas Gadani <lfg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508741}
Former-commit-id: aed1fed1e341e7a39071560fbecedced31c65030